# Data-Pipeline-with-Traceability

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  env.example  main.py  pyproject.toml
src/: app.py  data_ingestion.py  exception.py  middleware.py  model.py  router.py  service.py  utils.py
tests/: test_main.py
tests/mock_data/: test.txt
tests/stress_test/: locustfile.py
